fix: changed gap on about

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ nav a{
     height: fit-content;
     width: 100%;
     padding: 16px 8px 16px 8px;
-    gap: 32px;
+    gap: 64px;
 
 }
 
